# voraus-ad-dataset

./: .gitignore  README.md  configuration.py  coupling_layers.py  graph_inn.py  normalizing_flow.py  pyproject.toml  requirements.txt  tox.ini  train.py  voraus_ad.py
.github/: CODEOWNERS
tests/: conftest.py  test.parquet  test_coupling_layers.py  test_graph_inn.py  test_normalizing_flow.py  test_train.py  test_voraus_ad.py
